--- a/Tex/experiment.tex
+++ b/Tex/experiment.tex
@@ -45,13 +45,15 @@ As a control sample, the polymerisation was performed without any nanoparticles 
 \end{table}
 
 \subsection{Sample Characterisation}
+TEM images
+SAXS measurements
 \subsection{GaAs crystal films}
 
 \section{Setup}
 \begin{figure}
 	\centering
 	\includegraphics[width=0.8\linewidth]{images/setup.pdf}
-	\caption{Schematic of the experimental setup at SACLA}
+	\caption[Experimental setup at SACLA]{Experimental setup at SACLA: The sample is mounted on a scanning stage and aligned to stay in focus during the scan and be parallel to the Octal MPCCD detector, which is in a distance $d_{octal}$. The angle between incoming FEL and Sample is XXX. Behind the sample, an stray light filter, beamstop and (depending on the sample) a filter foil is installed. The Dual detector is mounted $d_{dual}$=1\,m away from the sample in a XXX angle. To reduce air scattering, a vacuum tube is installed in the path from sample to Dual.}
 \end{figure}
 \subsection{Imaging the Focus}
 \subsection{Imaging Nanoparticles}
