--- a/Tex/theory.tex
+++ b/Tex/theory.tex
@@ -161,7 +161,7 @@ M_t,gauss&=\left[\int_{-\infty}^{\infty} K(t) \left|\mu(t)\right|^2\diff t\right
 =42
 \end{align}
 
-The experimentally indistinguishable fluorescence energies $K_alpha,1$ and $K_alpha,2$ (as well as  $K_beta$ if no filter is used for suppression) give additional independent modes $M_E$
+The experimentally indistinguishable fluorescence energies $K_\alpha,1$ and $K_\alpha,2$ (as well as  $K_\beta$ if no filter is used for suppression) give additional independent modes $M_E$
 
 As the used X-ray detectors are polarization insensitive and X-ray fluorescence is unpolarized, there are 2 independent polarization modes giving $M_P = 2$  
 
