--- a/Tex/main.tex
+++ b/Tex/main.tex
@@ -95,7 +95,7 @@
 \usepackage{enumitem}
 
 %schönerer referenzierungen
-\usepackage[german,plain]{fancyref}
+\usepackage[english,plain]{fancyref}
 %app für appendix zu referenzen hinzufügen
 \newcommand*{\fancyrefappendixlabelprefix}{app}
 
