--- a/Tex/theory.tex
+++ b/Tex/theory.tex
@@ -132,6 +132,15 @@ Hanburry Brown and Twiss
 
 \paragraph{Siegert Relation for Pseudo-Thermal Light}
 
+
+
+ \begin{figure}
+	\centering
+	\includegraphics[width=0.9\linewidth]{images/scatteringvectors.pdf}
+	\caption[Scattering Vectors]{Scattering vector $q$ in CDI (left) and IDI (right). In CDI, $q$ is the momentum transfer between incoming and outgoing wave. In IDI, there is no momentum transfer from the incoming to the outgoing wave. Instead, intensity correlations of different $k_1$, $k_2$ give a momentum transfer $\delta q$ according to the Siegert relation.}
+	\label{fig:scatteringvectors}
+\end{figure}
+
 %-Single Photon Emitters/2nd Quant description
 %(siehe Referenzen in Schaller/resonance fluorescence)
 %-Fluorescence g2
