--- a/Tex/ffz.bib
+++ b/Tex/ffz.bib
@@ -794,6 +794,25 @@ The Compton scattering cross section in equation (110) is incorrect. It follows 
   groups   = {msc},
 }
 
+@Article{faigel2016,
+  author        = {Faigel, G. and Bortel, G. and Tegze, M.},
+  journal       = {Scientific Reports},
+  title         = {{Experimental phase determination of the structure factor from Kossel line profile}},
+  year          = {2016},
+  number        = {1},
+  pages         = {22904},
+  volume        = {6},
+  abstract      = {Kossel lines are formed when radiation from point x-ray sources inside a single crystal are diffracted by the crystal itself. In principle, Kossel line patterns contain full information on the crystalline structure: phase and magnitude of the structure factors. The phase is coded into the profile of the lines. Although this was known for a long time, experimental realization has not been presented. In this work we demonstrate experimentally that phases can be directly determined from the profile of the Kossel lines. These measurements are interesting not only theoretically, but they would facilitate structure solution of samples within extreme conditions, such as high pressure, high and low temperatures, high magnetic fields and extremely short times. The parallel measurement of many diffraction lines on a stationary sample will allow a more efficient use of the new generation of x-ray sources the X-ray free electron lasers (XFELs).},
+  da            = {2016/03/11},
+  date-added    = {2020-10-26 08:50:26 +0000},
+  date-modified = {2020-10-26 08:50:26 +0000},
+  doi           = {10.1038/srep22904},
+  groups        = {msc},
+  id            = {Faigel2016},
+  isbn          = {2045-2322},
+  ty            = {JOUR},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
