--- a/Tex/theory.tex
+++ b/Tex/theory.tex
@@ -158,6 +158,14 @@ is proportional to the Fourier transform of the arangment of emitters with $q=\v
 %-Fluorescence g2
 %$2 Level with finite Lifetime -> Spectrum of fluorescence
 \section{X-Ray Fluorescence}
+ \begin{figure}
+	\centering
+	\includegraphics[width=0.4\linewidth]{images/levels.pdf}
+	\caption[Atomic Levels]{Atomic levels and associated X-Ray energies}
+	\label{fig:levels}
+\end{figure}
+Spectrum of 2-Level-System
+Spectrum 
 
 \section{Intensity Correlations using X-Ray Fluorescence}
 \section{Signal to Noise Considerations}
