--- a/Tex/ffz.bib
+++ b/Tex/ffz.bib
@@ -813,6 +813,19 @@ The Compton scattering cross section in equation (110) is incorrect. It follows 
   ty            = {JOUR},
 }
 
+@Article{,
+}
+
+@Book{butz2015,
+  author    = {Butz, T.},
+  publisher = {Springer International Publishing},
+  title     = {Fourier Transformation for Pedestrians},
+  year      = {2015},
+  isbn      = {9783319169859},
+  series    = {Undergraduate Lecture Notes in Physics},
+  url       = {https://books.google.de/books?id=pytACQAAQBAJ},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
