--- a/Tex/main.tex
+++ b/Tex/main.tex
@@ -120,6 +120,8 @@
 \DeclareMathOperator{\difn}{\mathrm{d}^n \!}
 \DeclareMathOperator{\diff}{\mathrm{d}\!}
 
+\DeclareMathOperator\erf{erf}
+\DeclareMathOperator\erfc{erfc}
 %%pygments%
 \usepackage{fancyvrb}
 \usepackage{xcolor}
